# ComfyUI-advanced-model-manager

./: LICENSE  README.md  __init__.py  downloader_routes.py  model_manager.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
web/js/: modeldownloader.js
